[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokenlens-sdk"
version = "0.2.0"
description = "Python SDK for TokenLens — automatic token and cost tracking for AI requests"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "TokenLens", email = "nsandeep06595@gmail.com" }]
keywords = ["ai", "llm", "tokens", "cost", "analytics", "openai", "anthropic", "gemini", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# All active provider SDKs are bundled — a single `pip install tokenlens` is enough.
# To add a new provider: (1) create wrappers/<provider>.py, (2) add its package below.
dependencies = [
    "httpx>=0.24.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
]

[project.urls]
Homepage   = "https://github.com/alumnx-ai-labs/TokenLens"
Repository = "https://github.com/alumnx-ai-labs/TokenLens"

[tool.hatch.build.targets.wheel]
packages = ["tokenlens"]
